--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body>
-
     <header class="header-page">
         <!-- #region header -->
         <div class="container container-header">
@@ -34,8 +33,12 @@
             </nav>
             <address class="address">
                 <ul class="address-list">
-                    <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li>
+                        <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </address>
             <button class="burger-btn" type="button" data-menu-open>
@@ -56,22 +59,30 @@
                 <nav class="mobile-menu-nav"></nav>
                 <address class="mobile-menu-address"></address>
                 <ul class="mobile-s-list">
-                    <li class="mobile-s-item"><a class="mobile-s-link" href="#" aria-label="Instagram"><svg
-                                class="mobile-s-icon" width="24" height="24">
+                    <li class="mobile-s-item">
+                        <a class="mobile-s-link" href="#" aria-label="Instagram">
+                            <svg class="mobile-s-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg></a></li>
-                    <li class="mobile-s-item"><a class="mobile-s-link" href="#" aria-label="Twitter"><svg
-                                class="mobile-s-icon" width="24" height="24">
+                            </svg></a>
+                    </li>
+                    <li class="mobile-s-item">
+                        <a class="mobile-s-link" href="#" aria-label="Twitter"><svg class="mobile-s-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg></a></li>
-                    <li class="mobile-s-item"><a class="mobile-s-link" href="#" aria-label="Facebook"><svg
-                                class="mobile-s-icon" width="24" height="24">
+                            </svg></a>
+                    </li>
+                    <li class="mobile-s-item">
+                        <a class="mobile-s-link" href="#" aria-label="Facebook"><svg class="mobile-s-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg></a></li>
-                    <li class="mobile-s-item"><a class="mobile-s-link" href="#" aria-label="LinkedIn"><svg
-                                class="mobile-s-icon" width="24" height="24">
+                            </svg></a>
+                    </li>
+                    <li class="mobile-s-item">
+                        <a class="mobile-s-link" href="#" aria-label="LinkedIn"><svg class="mobile-s-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg></a></li>
+                            </svg></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -80,7 +91,7 @@
 
     <main>
         <!-- #region welcome -->
-        <section class="welcome-section ">
+        <section class="welcome-section">
             <div class="container welcome-container">
                 <h1 class="welcome">Effective Solutions for Your Business</h1>
                 <button class="button-wel" type="button" data-modal-open>
@@ -90,7 +101,7 @@
         </section>
         <!-- #endregion -->
         <!-- #region description -->
-        <section class="section section-descr ">
+        <section class="section section-descr">
             <div class="container descr-container">
                 <h2 class="title visually-hidden">Description</h2>
                 <ul class="descr-list">
@@ -114,8 +125,8 @@
                         </div>
                         <h3 class="descr-title">Punctuality</h3>
                         <p class="descr-text">
-                            Bring the key message to the brand's audience for the best price within the shortest
-                            possible time.
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
                         </p>
                     </li>
                     <li class="descr-item">
@@ -126,9 +137,8 @@
                         </div>
                         <h3 class="descr-title">Diligence</h3>
                         <p class="descr-text">
-                            Research and confirm brands that present the strongest digital growth opportunities and
-                            minimize risk.
-
+                            Research and confirm brands that present the strongest digital
+                            growth opportunities and minimize risk.
                         </p>
                     </li>
                     <li class="descr-item">
@@ -148,14 +158,16 @@
         </section>
         <!-- #endregion -->
         <!-- #region team -->
-        <section class="section team-section ">
+        <section class="section team-section">
             <div class="container team-container">
                 <h2 class="title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-photo">
                         <picture>
-                            <source srcset="./images/team/Mark_Guerrero.jpg 1x, ./images/team/Mark_Guerrero-@2x.jpg 2x"
-                                media="(min-width: 1158px)">
+                            <source srcset="
+                    ./images/team/Mark_Guerrero.jpg     1x,
+                    ./images/team/Mark_Guerrero-@2x.jpg 2x
+                  " media="(min-width: 1158px)" />
                             <img width="264" class="team-member" src="images/team/Mark_Guerrero.jpg"
                                 alt="Mark_Guerrero" />
                         </picture>
@@ -195,8 +207,10 @@
                     </li>
                     <li class="team-photo">
                         <picture>
-                            <source srcset="./images/team/Tom_Ford.jpg 1x, ./images/team/Tom_Ford-@2x.jpg 2x"
-                                media="(min-width: 1158px)">
+                            <source srcset="
+                    ./images/team/Tom_Ford.jpg     1x,
+                    ./images/team/Tom_Ford-@2x.jpg 2x
+                  " media="(min-width: 1158px)" />
                             <img width="264" class="team-member" src="images/team/Tom_Ford.jpg" alt="Tom_Ford" />
                         </picture>
                         <div class="team-photo-name">
@@ -235,8 +249,10 @@
                     </li>
                     <li class="team-photo">
                         <picture>
-                            <source srcset="./images/team/Camila_Garcia.jpg 1x, ./images/team/Camila_Garcia-@2x.jpg 2x"
-                                media="(min-width: 1158px)">
+                            <source srcset="
+                    ./images/team/Camila_Garcia.jpg     1x,
+                    ./images/team/Camila_Garcia-@2x.jpg 2x
+                  " media="(min-width: 1158px)" />
                             <img width="264" class="team-member" src="images/team/Camila_Garcia.jpg"
                                 alt="Camila_Garcia" />
                         </picture>
@@ -276,8 +292,10 @@
                     </li>
                     <li class="team-photo">
                         <picture>
-                            <source srcset="./images/team/Daniel_Wilson.jpg 1x, ./images/team/Daniel_Wilson-@2x.jpg 2x"
-                                media="(min-width: 1158px)">
+                            <source srcset="
+                    ./images/team/Daniel_Wilson.jpg     1x,
+                    ./images/team/Daniel_Wilson-@2x.jpg 2x
+                  " media="(min-width: 1158px)" />
                             <img width="264" class="team-member" src="images/team/Daniel_Wilson.jpg"
                                 alt="Daniel_Wilson" />
                         </picture>
@@ -320,14 +338,20 @@
         </section>
         <!-- #endregion -->
         <!-- #region portfolio -->
-        <section class="section portfolio-section hidden">
+        <section class="section portfolio-section">
             <div class="container portfolio-container">
                 <h2 class="title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/banking-app.jpg"
-                                alt="banking-app" />
+                            <picture>
+                                <source srcset="./images/portfolio/banking-app-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/banking-app.jpg 1x" media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/banking-app-mob.jpg" media="(max-width: 767px)" />
+                                <img src="./images/portfolio/banking-app-mob.jpg" class="port-photo" width="360"
+                                    alt="banking-app" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -341,8 +365,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/cashless-payment.jpg"
-                                alt="cashless-payment" />
+                            <picture>
+                                <source srcset="./images/portfolio/cashless-payment-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/cashless-payment.jpg 1x"
+                                    media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/cashless-payment-mob.jpg"
+                                    media="(max-width: 767px)" />
+                                <img src="./images/portfolio/cashless-payment-mob.jpg" class="port-photo" width="360"
+                                    alt="cashless-payment" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -357,8 +389,14 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/meditation-app.jpg"
-                                alt="meditation-app" />
+                            <picture>
+                                <source srcset="./images/portfolio/meditation-app-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/meditation-app.jpg 1x" media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/meditation-app-mob.jpg" media="(max-width: 767px)" />
+                                <img src="./images/portfolio/meditation-app-mob.jpg" class="port-photo" width="360"
+                                    alt="meditation-app" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -372,8 +410,14 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/taxi-service.jpg"
-                                alt="taxi-service" />
+                            <picture>
+                                <source srcset="./images/portfolio/taxi-service-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/taxi-service.jpg 1x" media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/taxi-service-mob.jpg" media="(max-width: 767px)" />
+                                <img src="./images/portfolio/taxi-service-mob.jpg" class="port-photo" width="360"
+                                    alt="taxi-service" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -388,8 +432,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/screen-illustrations.jpg"
-                                alt="screen-illustrations" />
+                            <picture>
+                                <source srcset="./images/portfolio/screen-illustrations-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/screen-illustrations.jpg 1x"
+                                    media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/screen-illustrations-mob.jpg"
+                                    media="(max-width: 767px)" />
+                                <img src="./images/portfolio/screen-illustrations-mob.jpg" class="port-photo"
+                                    width="360" alt="screen-illustrations" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,8 +456,14 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-thumb">
-                            <img class="port-photo" width="360" src="./images/portfolio/online-courses.jpg"
-                                alt="online-courses" />
+                            <picture>
+                                <source srcset="./images/portfolio/online-courses-@2x.jpg 2x"
+                                    media="(min-width: 1158px)" />
+                                <source srcset="./images/portfolio/online-courses.jpg 1x" media="(min-width: 768px)" />
+                                <source srcset="./images/portfolio/online-courses-mob.jpg" media="(max-width: 767px)" />
+                                <img src="./images/portfolio/online-courses-mob.jpg" class="port-photo" width="360"
+                                    alt="online-courses" />
+                            </picture>
                             <p class="overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -488,7 +546,7 @@
     </footer>
 
     <!-- #region modal window -->
-    <div class="modal-backdrop " data-modal>
+    <div class="modal-backdrop" data-modal>
         <div class="modal-window">
             <button type="button" class="modal-btn-close" data-modal-close>
                 <svg class="modal-btn-icon" width="8" height="8">
@@ -555,8 +613,6 @@
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
     <!-- #endregion -->
-
-
 </body>
 
 </html>
