--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
     <footer class="footer">
         <!-- #region footer -->
-        <div class="container container-footer hidden">
+        <div class="container container-footer">
             <div class="footer-description">
                 <a class="logo-footer" href="">Web<span class="logo-color-footer">Studio</span>
                 </a>
