--- a/index.html
+++ b/index.html
@@ -599,8 +599,10 @@
                                 <use href="./images/icons.svg#icon-choice"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the
-                        <a class="modal-checkbox-link" href="">Privacy Policy</a>
+                        <span class="modal-checkbox-border-text">
+                            I accept the terms and conditions of the
+                            <a class="modal-checkbox-link" href="">Privacy Policy</a>
+                        </span>
                     </label>
                 </div>
 
